# taranis-base-bot

./: .gitignore  Containerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.yml  pypi_publish.yml  test.yml  test_and_build.yml
taranis_base_bot/: __init__.py  blueprint.py  config.py  decorators.py  log.py  misc.py  modelinfo.py  protocols.py  router.py  setup.py
taranis_base_bot/tests/: conftest.py  test_api.py
tests/: .env.test  conftest.py  test_api.py  test_create_app.py  test_misc.py  test_model.py
