[project]
name = "taranis-base-bot"
description = "Base repo for taranis bots"
readme = "README.md"
license = "EUPL-1.2"
maintainers = [{ name = "AIT", email = "lukas.linauer@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.13"
dependencies = [
    "flask",
    "requests",
    "granian",
    "pydantic-settings",
    "python-dotenv",
    "requests-mock>=1.12.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "jsonschema", "ruff"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/taranis-base-bot"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^(v[0-9].[0-9].[0-9])"
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["taranis_base_bot"]

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
